[package]
name = "exercism"
version = "0.2.0"
edition = "2021"
authors = ["Yotoko <vhgcuong95@gmail.com", "CuongD9 <cuong.vuhung@vti.com.vn"]
rust-version = "1.70.0"
description = "My exercism"
readme = "README.md"
repository = "https://github.com/vhgcuong/exercism.git"
keywords = ["exercism"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/vhgcuong/exercism"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
